Bug 513606 - Unable to open folders in Save dialog using touchscreen if folder contains many items
Summary: Unable to open folders in Save dialog using touchscreen if folder contains ma...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 6.20.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-20 13:25 UTC by peto1994
Modified: 2026-01-12 09:54 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description peto1994 2025-12-20 13:25:55 UTC
SUMMARY

If you try to open folders in Save dialog, usually you have to double-click it and you get moved to that folder. But when the folder you are in contains so many items that some are off-screen and scrolling is available, then double-clicking does nothing. (The single click just selects things, same as with mouse.)


STEPS TO REPRODUCE
1. Open some app that can save file, for example open some file in Kate.
2. Use the save option so that the system Save dialog shows.
3. Navigate to some folder that has lot's of files and some sub-folders.
4. Double tap on sub-folder using touchscreen.

OBSERVED RESULT

It's not possible to get into sub-folder.

EXPECTED RESULT

I would expect that just single tap would open the folder. (I mean inside the Save dialog, not in file browser.) Double-tapping on touchscreen is kind of pain, and for example file browser uses single tap to open when using touchscreen (even if mouse requires double-click). Having consistent behavior across all KDE components would be nice. If that's not possible, than at least fixing the double-tap would be appreciated, as now the dialogs are completely unusable on touchscreens.

SOFTWARE/OS VERSIONS
Operating System: Garuda Linux
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × Intel® Core™ Ultra 9 285H
Memory: 32 GiB of RAM (30.9 GiB usable)
Graphics Processor: Intel® Graphics

ADDITIONAL INFORMATION

-
Comment 1 Méven Car 2026-01-07 10:07:00 UTC
Rephrased, the single-click mode is not accounted for when touching folders in the view (KDirOperator*).

I am guessing this does not only happen for "filled" folders, but for any folder you might want to open using single click.

Does it happen for icons view and detail the same ?
Comment 2 Bug Janitor Service 2026-01-07 11:17:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2104
Comment 3 peto1994 2026-01-07 22:05:33 UTC
(In reply to Méven Car from comment #1)
> Rephrased, the single-click mode is not accounted for when touching folders
> in the view (KDirOperator*).
> 
> I am guessing this does not only happen for "filled" folders, but for any
> folder you might want to open using single click.

Correct, if the intended behavior is for items to be opened with single tap, it does not work in relevant views at all.

> 
> Does it happen for icons view and detail the same ?

Yes, all views behave the same. (I'm assuming you mean the "Icons view", "Compact view" and "Details view" buttons that are on top of the dialog.) Single tap selects folder but does not open it, double tap opens it only if folder is not "filled".
Comment 4 Méven 2026-01-11 16:27:20 UTC
Git commit d067af55ada6d73acc98019b9c8c52efcf781f18 by Méven Car.
Committed on 11/01/2026 at 16:08.
Pushed by meven into branch 'master'.

KDirOperator: implement single tap gesture

So single tap activates the item tapped.

M  +33   -1    src/filewidgets/kdiroperator.cpp

https://invent.kde.org/frameworks/kio/-/commit/d067af55ada6d73acc98019b9c8c52efcf781f18