KDirOperator: implement single tap gesture

So single tap activates the item tapped.

BUG: 513606