src/filewidgets/kdiroperator.cpp
@@ -53,6 +53,8 @@
 #include <QActionGroup>
 #include <QApplication>
 #include <QDebug>
+#include <QDrag>
+#include <QGestureEvent>
 #include <QHeaderView>
 #include <QListView>
 #include <QMenu>
@@ -1263,8 +1265,24 @@ bool KDirOperator::eventFilter(QObject *watched, QEvent *event)
     case QEvent::TouchBegin:
         d->m_isTouchEvent = true;
         break;
+    case QEvent::Gesture: {
+        const auto gestureEvent = dynamic_cast<QGestureEvent *>(event);
+        if (auto tap = gestureEvent->gesture(Qt::TapGesture)) {
+            if (tap->state() == Qt::GestureStarted) {
+                d->m_isTouchDrag = true;
+            }
+            if (tap->state() == Qt::GestureCanceled) {
+                d->m_isTouchDrag = false;
+            }
+            if (tap->state() == Qt::GestureFinished && d->m_isTouchDrag) {
+                d->slotActivated(d->m_itemView->indexAt(static_cast<QTapGesture *>(tap)->position().toPoint()));
+                d->m_isTouchDrag = false;
+            }
+        }
+        break;
+    }
     case QEvent::MouseMove: {
-        if (d->m_isTouchEvent) {
+        if (d->m_isTouchEvent && !d->m_isTouchDrag) {
             return true;
         }
 
@@ -1353,8 +1371,21 @@ bool KDirOperator::eventFilter(QObject *watched, QEvent *event)
         break;
     }
     case QEvent::DragEnter: {
+        // don't drag from within our own viewport
+        auto dragMoveEvent = static_cast<QDragMoveEvent *>(event);
+        if (auto scrollArea = static_cast<QAbstractScrollArea *>(dragMoveEvent->source())) {
+            if (scrollArea->viewport() == watched) {
+                QDrag::cancel();
+                event->accept();
+                return true;
+            }
+        }
+
         // Accepts drops of one file or folder only
         QDragEnterEvent *evt = static_cast<QDragEnterEvent *>(event);
+        if (!evt->mimeData()) {
+            return true;
+        }
         const QList<QUrl> urls = KUrlMimeData::urlsFromMimeData(evt->mimeData(), KUrlMimeData::PreferLocalUrls);
 
         // only one file/folder can be dropped at the moment
